sqlinjection e xss stored

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Network security</title>
+    <title>Segurança de Redes</title>
 </head>
 
 <body>
@@ -12,13 +12,14 @@
     </header>
     <section>
         <form action="./login.php" method="POST">
-            <label for="id">User: </label>
-            <input type="text" name="id"><br>
+            <label for="nome">Usuario: </label>
+            <input type="text" name="nome"><br>
 
-            <label for="password">Password: </label>
-            <input type="text" name="password"><br>
+            <label for="senha">Password: </label>
+            <input type="password" name="senha"><br>
 
             <button type="submit">Entrar</button>
+            <a href="./cadastro.html">Não possui conta?</a>
         </form>
     </section>
 </body>
